--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 <body>
 <h1>Задание №1</h1>
 <h2>Карточки</h2>
+<button class="addCard" onclick="handleAddCard()">+</button>
 <div class="container" id="container"></div>
 
 <script src="script.js"></script>
