--- a/src/index.html
+++ b/src/index.html
@@ -12,19 +12,19 @@
 <body>
 <h1>Задание №1</h1>
 <h2>Карточки</h2>
-<a id="btn-add" class="addCard" href="#add-card">+</a>
+<button id="btnAdd" class="open-modal">+</button>
 <div class="container" id="container"></div>
-<div id="add-card" class="modal">
+<div id="addCard" class="modal">
 
     <div class = "modal-card">
         <form action="" class="create-card">
-            <label for="addNewCard" >Добавление карточки</label>
-            <input type="text" class="title-card" placeholder="Карточка">
-            <input type="text" class="title-card" placeholder="Содержание карточки">
-            <input type="date" class="title-card" placeholder="Дата">
-            <button type="submit" class="addCard" onclick="handleAddCard()">+</button>
-            <a href="" class="close">Нажми меня</a>
+            <h2>Добавление карточки</h2>
+            <input type="text" class="title-card" placeholder="Карточка"><br>
+            <input type="text" class="title-card" placeholder="Содержание карточки"><br>
+            <input type="date" class="title-card" placeholder="Дата"><br>
         </form>
+        <button class="addCard" onclick="handleAddCard()">Добавить карточку</button>
+            <button  class="close-box">X</button>
     </div>
 </div>
 <script src="script.js"></script>
