--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
     <div class = "modal-card">
         <form action="" class="create-card">
             <h2>Добавление карточки</h2>
-            <input type="text" class="title-card" placeholder="Карточка"><br>
-            <input type="text" class="title-card" placeholder="Содержание карточки"><br>
-            <input type="date" class="title-card" placeholder="Дата"><br>
+            <input type="text" id="inputTitle" class="title-card" placeholder="Карточка"><br>
+            <input type="text" id="inputText" class="title-card" placeholder="Содержание карточки"><br>
+            <input type="date" id="inputDate" class="title-card" placeholder="Дата"><br>
         </form>
         <button class="addCard" onclick="handleAddCard()">Добавить карточку</button>
             <button  class="close-box">X</button>
