add primitive and tasks

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
 <h2>Карточки</h2>
 <div class="container" id="container"></div>
 
-<script src="script.js"></script>
+<script src="primitive.js"></script>
 </body>
 </html>
