promise objects class and etc

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,6 @@
     </div>
 </div>
 <script src="script.js"></script>
-<script src="task-02.js"></script>
+<script src="object-class.js"></script>
 </body>
 </html>
