--- a/src/index3.html
+++ b/src/index3.html
@@ -9,14 +9,99 @@
     <title>Title</title>
     <style>
         #display {
-            width: 100%;
+            width: 200px;
+            height: 150px;
+            padding: 10px;
+            margin: 0 20px;
+            border: 1px solid gray;
+            border-radius: 10px;
+            box-shadow: inset 0 0 10px 10px rgba(57, 95, 230,0.6);
+            background-color: #889ff2;
+            overflow-x: hidden;
+        }
+        .machine {
+            margin: 20px 20%;
+            border: 2px solid black;
+            width: 60%;
+            height: 800px;
+            border-radius: 10px;
+        }
+        .panel {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 30px;
+            margin: 10px 20px;
+            border: 2px solid gray;
+            border-radius: 10px 10px 80px 80px;
+            height: 220px;
+        }
+        .tide_place {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 200px;
+            height: 150px;
+            border-radius: 10px 10px 10px 80px;
+            padding: 10px;
+            box-shadow: 0 3px 5px 5px lightgrey;
+        }
+        .button_panel {
+            width: 200px;
+            height: 150px;
+            padding: 10px;
+        }
+        button {
+            border-radius: 50%;
+        }
+        .drum {
+            display: flex;
+            align-items: center;
+            height: 500px;
+            width: 500px;
+            border-radius: 50%;
+            border: 1px solid black;
+            margin: auto;
+        }
+        .drum_window {
+            height: 350px;
+            width: 350px;
+            border-radius: 50%;
+            border: 1px solid black;
+            margin: auto;
+            box-shadow: inset 0 0 5px 5px aquamarine;
         }
     </style>
 </head>
 <body>
-<textarea id="display" disabled></textarea>
-<button onclick="zanussi.waterVolume(5000)">Залить воды</button>
-<button onclick="zanussi.getStart()">Начать стирку</button>
-<script src="massive.js"></script>
+<div class="machine">
+
+    <div class="panel">
+        <div class="tide_place">
+            <span class = "label" id="model"> </span>
+            <span class = "label" id="brand"></span>
+        </div>
+        <div id="display"></div>
+        <div class="button_panel">
+            <div class="button_place">
+                <button onclick="zanussi.waterVolume(5000)">A</button>
+                <span class="text">Залить воду</span>
+            </div>
+            <div class="button_place">
+                <button onclick="zanussi.getStart()">B</button>
+                <span class="text">Начать стирку</span>
+            </div>
+            <div class="button_place"></div>
+            <div class="button_place"></div>
+
+        </div>
+    </div>
+    <div class="drum">
+        <div class="drum_window"></div>
+    </div>
+</div>
+
+<script src="task-02.js"></script>
 </body>
 </html>
