добавил кнопку описания к фильмам

--- a/src/index.html
+++ b/src/index.html
@@ -18,16 +18,15 @@
 
     <div class = "modal-card">
         <form action="" class="create-card">
-            <h2>Добавление карточки</h2>
+            <h2 id="modal_title" >Добавление карточки</h2>
             <input type="text" id="inputTitle" class="title-card" placeholder="Карточка"><br>
             <input type="text" id="inputText" class="title-card" placeholder="Содержание карточки"><br>
             <input type="date" id="inputDate" class="title-card" placeholder="Дата"><br>
         </form>
-        <button class="addCard" onclick="handleAddCard()">Добавить карточку</button>
+        <button id="add-card" class="addCard" onclick="handleAddCard()">Добавить карточку</button>
             <button  class="close-box">X</button>
     </div>
 </div>
 <script src="script.js"></script>
-<script src="task-02.js"></script>
 </body>
 </html>
