--- a/src/index2.html
+++ b/src/index2.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="краткое описание">
     <meta name="keywords" content="фильмы, бетмен, поиск">
-
     <title>Title</title>
     <style>
         #app {
             display: flex;
             flex-wrap: wrap;
+            justify-content: space-around;
         }
-
         .card {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
             max-width: 250px;
             border: 1px solid lightgrey;
             border-radius: 5px;
             margin: 10px;
             padding: 5px;
+            position: relative;
+        }
+
+        .description {
+            position: relative;
+            height: 110px;
+            overflow: hidden;
+            background-color: white;
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
+<h1 class="main_title">Все фильмы про :
+<input id="input-find" type="text" class="input_find" value="batman">
+<button id="find" class="find" onclick="find()">поиск</button>
+</h1>
 <div id="app"></div>
 <script src="promise.js"></script>
 </body>
