--- a/src/index2.html
+++ b/src/index2.html
@@ -40,7 +40,7 @@
 <body>
 <h1 class="main_title">Все фильмы про :
 <input id="input-find" type="text" class="input_find" value="batman">
-<button id="find" class="find" onclick="find()">поиск</button>
+<button id="find" class="find">поиск</button>
 </h1>
 <div id="app"></div>
 <script src="promise.js"></script>
